<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frag_form">

    <challenge.invest.core.widget.DefaultInputText
            android:id="@+id/frag_form_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:label="@string/frag_form_value_label"
            android:hint="@string/frag_form_value_hint"
            android:layout_marginTop="@dimen/dimen_36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <challenge.invest.core.widget.DefaultInputText
            android:id="@+id/frag_form_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:label="@string/frag_form_due_date_label"
            android:hint="@string/frag_form_due_date_hint"
            android:layout_marginTop="@dimen/dimen_24dp"
            app:layout_constraintTop_toBottomOf="@+id/frag_form_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <challenge.invest.core.widget.DefaultInputText
            android:id="@+id/frag_form_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:label="@string/frag_form_percent_label"
            android:hint="@string/frag_form_percent_hint"
            android:layout_marginTop="@dimen/dimen_24dp"
            app:layout_constraintTop_toBottomOf="@+id/frag_form_due_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/frag_form_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_52dp"
            android:layout_marginLeft="@dimen/dimen_32dp"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_32dp"
            android:layout_marginRight="@dimen/dimen_32dp"
            android:text="@string/frag_form_button_text"
            app:layout_constraintTop_toTopOf="@+id/frag_form_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>